--- a/css/translated.css
+++ b/css/translated.css
@@ -1,8 +1,14 @@
 /*MISC */
 /*Variables*/
 /* colors */
-/* spacings */
 /* font-family*/
+/* spacings */
+.spacings-medium {
+  padding: 2em; }
+
+.spacings-large {
+  padding: 4em; }
+
 /*Normalize*/
 * {
   margin: 0;
@@ -25,6 +31,11 @@ body {
 
 img {
   width: 100%; }
+
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-around; }
 
 /*PARTIAL*/
 header {
@@ -52,7 +63,6 @@ header {
     list-style-type: none; }
   header nav .menu {
     display: flex;
-    gap: 2em;
     background-color: moccasin;
     border: solid;
     font-size: 40px;
@@ -78,16 +88,16 @@ header {
 
 /*footer*/
 footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   width: 100vw;
   height: 100%;
   background-color: moccasin;
   font-size: 20px;
-  display: flex;
   flex-grow: 1;
   flex-shrink: 1;
-  flex-basis: 100%;
-  flex-direction: row;
-  justify-content: space-evenly; }
+  flex-basis: 100%; }
 
 /*PAGES*/
 .grilla {
@@ -135,31 +145,18 @@ footer {
         width: 300px;
         height: 300px;
         margin: 20px;
-        padding: 24px;
-        background: rgba(255, 255, 255, 0);
-        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-        backdrop-filter: blur(20px);
-        -webkit-backdrop-filter: blur(20px);
-        border-radius: 10px;
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        border: 2px solid black; }
+        padding: 24px; }
       .grilla .trabajos .trabajos__cartas__perfil {
         width: 300px;
         height: 300px;
         margin: 20px;
-        padding: 24px;
-        background: rgba(255, 255, 255, 0);
-        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-        backdrop-filter: blur(20px);
-        -webkit-backdrop-filter: blur(20px);
-        border-radius: 10px;
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        border: 2px solid black; }
+        padding: 24px; }
       .grilla .trabajos .trabajos__cartas__regla {
         width: 300px;
         height: 300px;
         margin: 20px;
-        padding: 24px;
+        padding: 24px; }
+      .grilla .trabajos .trabajos__cartas .box-shadow, .grilla .trabajos .trabajos__cartas .trabajos__cartas__soldador, .grilla .trabajos .trabajos__cartas .trabajos__cartas__perfil, .grilla .trabajos .trabajos__cartas .trabajos__cartas__regla {
         background: rgba(255, 255, 255, 0);
         box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
         backdrop-filter: blur(20px);
