--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,13 +1,12 @@
 /*footer*/ 
 footer{
+    @include flex (row , space-evenly);
     width: 100vw;
     height:100%;
     background-color: $alternative;
     font-size: 20px;
-    display:flex;
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: 100%;
-    flex-direction: row;
-    justify-content: space-evenly;
+ 
 }
