3ra_entrega_trabajo_final

--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -2,9 +2,9 @@
    /*Variables*/ 
    
    /* colors */
-    $primary: #87847A;
-    $secondary: #665656;
-    $alternative: moccasin;
+    $primario: #87847A;
+    $secundario: #665656;
+    $alternativo: moccasin;
 
 
     
