--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,8 @@
 :root {
          /* colors */
-          --primary: #87847A;
-          --secondary: #665656;
-          --alternative: moccasin;
+          --primario: #87847A;
+          --secundario: #665656;
+          --alternativo: moccasin;
 
          /* spacings */
             --spacings-medium:2em;
@@ -22,16 +22,17 @@
 }
 html{
   font-size: 62.5%;
+ 
 }
 a{
   font-family: var(--texto);
   text-decoration: none;
 }
-body {
+ html body {
   width: 100%;
   height: auto;
   background-size:cover;
-  background-color:var(--primary);
+  background-color:var(--primario);
   font-family: var(--principal);
 }
 img {
@@ -42,14 +43,71 @@ img {
 /* COMIENZO DEL HEADER */
 
 body header {
-  
+
   display: flex;
-  background-color: var(--secondary);
+  background-color: var(--secundario);
   justify-content:space-around;
   padding: 20px 0;
   align-items: center;
   border-bottom: 2px solid black;
   
+}
+body header div {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+body header div img {
+  height: 150px;
+  width: 100%;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+
+#navegacion {
+  color: maroon;
+  margin: 5px 10px 5px 10px;
+}
+
+.navbar-nav li {
+  position: relative;
+}
+
+.navbar-nav li::before {
+  content: "";
+  height: 3px;
+  width: 0%;
+  background: moccasin;
+  position: absolute;
+  left: 18px;
+  bottom: 7px;
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+
+.navbar-nav li:hover::before {
+  width: 70%;
+}
+
+.navbar {
+  background-color:var();
+  font-size: 20px;
+}
+
+#boton {
+  border-color: #727272;
+}
+
+.collapse {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 header nav  .menu{
@@ -112,12 +170,6 @@ header nav .menu {
 
 }
 
-.solucion {
-  color: var(--alternative);
-  font-size: 40px;
-  padding: 2px;
-  margin: 5px; 
-}
 
 section h2 {
   font-size: 40px;   
@@ -135,23 +187,47 @@ section h2 {
 /*COMIENZO DEL INDEX */
 /* COMIENZO DE GRID INDEX */
 
+
 .grilla {
-   width: 100%;
-   height: 100%;
-   margin: 0 auto;
-   display: grid;
-   grid-template-columns: 1fr 1fr 1fr;
-   grid-template-rows:  1fr 0.5fr;
-   gap: 2rem 2rem;
-   align-items: center;
-   grid-auto-flow: row;
-   grid-template-areas:
-     "bienvenida bienvenida trabajos"
-     "presentacion presentacion presentacion";
-    }
+  width: 90%;
+  height: 90%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows:  1fr 0.5fr;
+  gap: 2rem 2rem;
+  align-items: center;
+  grid-auto-flow: row;
+  margin-top: var(--spacings-large);
+  grid-template-areas:
+  "bienvenida bienvenida trabajos"
+  "presentacion presentacion presentacion";
+}
+
+.entrada__baner{
+  width: 100%;
+  height: 100%;
+}
+  
+.solucion {
+  color: var(--alternativo);
+  width: 58vw;
+  height: 50vw;
+  font-size: 37px;
+  padding: 2px;
+  margin: 5px; 
+}
     
-    
-    
+.card-body{
+  font-size: var(--secundario);
+  border-color: solid black 2px;
+}
+.card-title{
+  color: var(--alternativo);
+  font-size: 40px;
+  padding: 2px;
+  margin: 5px; 
+}
     
     
     .bienvenida{
@@ -163,13 +239,8 @@ section h2 {
 }   
 
 
-.entrada__baner{
-  width: 100%;
-  height: 100%;
   
   
-  
-}
 
 .card { 
   margin-left: auto; 
@@ -291,7 +362,9 @@ section h2 {
 .presentacion__resenia {
   font-size: 20px;
   width: 100%;
-  height: 100%; 
+  height: 100%;
+  padding: 20px;
+  margin-bottom: var(--spacings-medium); 
   
 } 
 
@@ -305,40 +378,57 @@ section h2 {
 
 /*COMIENZO DE LA PAGINA NOSOTROS*/
 #nosotros {
-  width: 100%;
-  height: 100%;
-  margin-left: 0 auto;
-  margin-right: 0 auto;
+  width: 90vw;
+  height: 90vh;
   font-size: 30px;
   display:flex;
   flex-direction: column;
-  justify-content:center ;
+  justify-content:space-around;
+  align-items: center;
+  margin-bottom: var(--spacings-medium);
+  margin-top: var(--spacings-medium);
 }
 
 .contenedor {
+  display: flex;
+  flex-direction:row;
  width: 100%;
- height: 100%;
+ height: auto;
  display: flex;
- justify-content: center;
+ justify-content:center
+ 
 }
  
+
+
 .contenedor__diseñador {
- width: 600px;
- height: 600px;
+ width: 400px;
+ height: 300px;
+
  
 
 }
 
 
 .contenedor__equipo {
-  width:600px;
-  height:600px;
+  width:400px;
+  height:300px;
+  gap: var(--spacings-large);
 }
 
-.texto{
-  width: 600px;; 
+.contenedor__titulo {
+  color: var(--alternativo);
+  font-size: 30px;
+  padding: 2px;
+  margin: 5px;
+  gap: var(--spacings-medium); 
+}
+
+.contenedor__parrafo { 
+  width: 500px;; 
   height: 300px; 
-  padding: 30px;
+  padding: 15px;
+font-size: 25px;
 }
 /* FIN DE LA PAGINA NOSOTROS*/
 
@@ -347,7 +437,14 @@ section h2 {
 .seccion__aluminio {
   padding: 50px;
   font-size: 35px;
-}    
+} 
+.aluminio__herreria {
+  color: var(--alternativo);
+  font-size: 40px;
+  padding: 2px;
+  margin: 5px;
+  gap: var(--spacings-medium); 
+} 
 
 .d-block{
   height:80%;
@@ -385,36 +482,172 @@ section h2 {
 
 /* INICIO DE CONTACTO */
 
+ 
 #contacto {
- width: 1800px ;
- height: 700px;
- border: 2px; 
- margin-top: 15px;
+  display: grid;
+  width:100vw ;
+  height:100vh;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+  grid-template-rows: 1fr;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  
+}
+
+
+.venta {
+ display: grid;
+ flex-direction:column;
+ width: 75%;
+ height: 100%;
+ margin-left: auto;
+ margin-right: auto;
+
+}
+
+section div h2 {
+  color: var(--alternativo);
+  font-size: 40px;
+  padding:40px;
+  margin: 5px;
+  gap: var(--spacings-medium); 
+  margin-top: var(--spacings-medium);
+  
+ 
+
 }
 
 .llamada {
- width:700px;
- height: 500px;
+ display: grid;
+  width:500px;
+ height:400px;
+ padding: 15px;
+ margin-left: auto;
+ margin-right: auto;
+ margin-bottom: 10px;
+ margin-top: 25px;
+ background-color: var(--alternative);
+ border: transparent;
+ padding: 10px;
+ box-shadow:
+  3px 2.8px 2.2px rgba(0, 0, 0, 0.05),
+  7.2px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+  13.6px 12.5px 10px rgba(0, 0, 0, 0.035),
+  24.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+  45.5px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+  109px 100px 80px rgba(0, 0, 0, 0.07)
+  
+
 }
 
-.formulario {
- width: 700px;
- height: 500px;
- font-size: 50px;
- display: inline-block;
+section form {
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 0.2fr 0.2fr 0.5fr 0.2fr;
+  grid-template-rows: 0.2fr 0.2fr 0.5fr 0.2fr;
+  gap: 5px;
+  height: 400px;
+  width: 550px;
+  justify-items: center;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
+  margin-top: 50px;
+  border: solid 3px #1d1b1b;
 }
 
-input {
- width: 250px ;
- height: 40px; 
+section form .nombre {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column-align: end;
+  justify-self: end;
 }
 
-form {
- width: 600px ;
- height: 400px;
- display: inline-block; 
- background-position: center;
-} 
+section form .apellido {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column-align: start;
+  justify-self: start;
+}
+
+section form .mail {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -ms-grid-column-align: end;
+  justify-self: end;
+}
+
+section form .telefono {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -ms-grid-column-align: start;
+  justify-self: start;
+}
+
+section form .mensaje {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3/4;
+  height: 150px;
+}
+
+section form #enviar {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+  width: 30%;
+}
+
+section form textarea {
+  resize: none;
+  width: 500px;
+  margin-top: 5px;
+  font-size: 16px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+section form input {
+  height: 40px;
+  width: 250px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 16px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+
+ 
 
 /* FIN DE CONTACTOS*/
 
@@ -424,7 +657,7 @@ form {
 footer{
   width: 100vw;
   height:100%;
-  background-color: var(--alternative);
+  background-color: var(--alternativo);
   font-size: 20px;
   display:flex;
   flex-grow: 1;
@@ -483,19 +716,6 @@ footer{
   }
   
 }
-@media  (max-width:534px)  {
-  header {
-
-  display:flex;
-  width: 598px;
-  flex-direction:column;
-   flex-basis: 100%; 
-  flex-grow: 1;
-  gap: 2rem;
-}
-
-
-}
 
 @media  (max-width:534px)  {
   header {
@@ -507,6 +727,7 @@ footer{
   flex-grow: 1;
   gap: 2rem;
 }
+ }
 
 
 @media (max-width:925px){ 
@@ -532,4 +753,112 @@ footer{
 
 }
 
+@media only screen and (min-width: 768px) {
+  section #contacto {
+    display: -ms-grid;
+    display: grid;
+    justify-items: center;
+    grid-column: auto;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 0.2fr 0.2fr 0.5fr 0.2fr;
+    grid-template-rows: 0.2fr 0.2fr 0.5fr 0.2fr;
+    gap: 5px;
+    height: 500px;
+    width: 80%;
+    text-align: center;
+  }
+
+  section form {
+  display: -ms-grid;
+  display: grid;
+  grid-column: auto;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 0.2fr 0.2fr 0.5fr 0.2fr;
+  grid-template-rows: 0.2fr 0.2fr 0.5fr 0.2fr;
+  gap: 5px;
+  height: 500px;
+  width: 80%;
+  align-items: center;
+  text-align : center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
+  margin-top: 50px;
+  border: solid 3px #1d1b1b;
 }
+
+section form .nombre {
+  -ms-grid-columns: 1;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  -ms-grid-rows: 1;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+section form .apellido {
+  -ms-grid-columns: 2;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  -ms-grid-rows: 1;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+form .mail {
+  -ms-grid-columns: 1;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  -ms-grid-rows: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+section form .telefono {
+  -ms-grid-columns: 2;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  -ms-grid-rows: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+form .mensaje {
+  -ms-grid-columns: 1;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  -ms-grid-rows: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+
+form #enviar {
+  -ms-grid-columns: 1;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  -ms-grid-rows: 4;
+  grid-row-start: 4;
+  grid-row-end: 5;
+  width: 30%;
+}
+
+section form textarea {
+  resize: none;
+  width: 95%;
+  height: 90%;
+  margin-top: 5px;
+  font-size: 16px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+section form input {
+  height: 40px;
+  width: 90%;
+  font-size: 16px;
+  font-family: 'Times New Roman', Times, serif;
+}
+ }
