--- a/views/aluminio.html
+++ b/views/aluminio.html
@@ -6,76 +6,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aluminio/herreria antonutti</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="../css/index.css">
     <link rel="icon" type="jpg" href="../img/logo.navegador.png">
 </head>
 <body>
-    <header>
-        <picture class="header__logo">
-            <img class="header__img" src="../img/logo.png" alt="logo de herreria amtonutti">
-        </picture> 
-        <nav class="navegacion">
-            <ul class="menu">
-                 <li class="menu__list">
-                     <a class="menu__link" href="../index.html">inicio</a></li>
-                 <li class="menu__list">
-                     <a class="menu__link" href="./nosotros.html">nosotros</a></li>
-                 <li class="menu__list">
-                     <a class="menu__link" href="./aluminio.html">aluminio</a></li>
-                 <li class="menu__list">
-                     <a class="menu__link" href="./herreria.html">herreria</a></li>
-                 <li class="menu__list">
-                     <a class="menu__link" href="./contactos.html">contactos</a></li>
-            </ul>
-         </nav>    
-    </header>
+  <header>
+    <picture class="header__logo">
+       <img class="header__img" src="../img/logo.png" alt="logo de herreria amtonutti">
+    </picture>
+    <nav class="navbar navbar-expand-md  navbar-dark">
+        <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span id="navegacion" class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aluminio.html">aluminio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="herreria.html">herreria</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactos.html">Contactos</a>
+            </li>
+          </ul>
+        </div>
+      </nav>         
+</header>
     
     <main class="container">
          <article class="seccion__aluminio animate__animated animate__fadeInLeft">
-                     <h1 class="solucion">aluminio</h1>
+                     <h1 class="aluminio__herreria">aluminio</h1>
                      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit facere, sequi, deserunt perferendis dicta neque quidem dignissimos facilis architecto distinctio quibusdam beatae delectus excepturi quo labore. Qui voluptas cumque pariatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aut maiores laboriosam ex numquam asperiores delectus exercitationem a, et corrupti ab facilis quasi deleniti voluptatem quaerat quod odit cum similique?</p>
         </article>
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-            
-            
-            <div class="carousel-inner px-5">
-              <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../img/herreria.mesa.png" class="d-block w-auto" alt="...">
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="../img/aluminio.puerta.png" class="d-block w-auto" alt="...">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <img class="d-block w-100" src="../img/herreria.mesa.png" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img src="../img/herreria.techo.png" class="d-block w-auto" alt="...">
+                  <img class="d-block w-100" src="../img/aluminio.puerta.png" alt="Second slide">
               </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+              <div class="carousel-item">
+                  <img class="d-block w-100" src="../img/herreria.techo.png" alt="Third slide">
+              </div>
           </div>
-        
-        
-       
-   </main>
-  
-   <footer>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+      </div>
+</main>
+<footer >
     <section>
             <div class="encabezado">            
                                    <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
                                    <h3 class="encabezado__direccion">direcion:calle123</h3>
             </div>
             <div class="alert alert-danger" role="alert">
-           <p>esta pagina web es sin fines de lucro . todos los derechos reservados </p>
+           <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
         </div>
 
     </section>
 </footer> 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+    </script> 
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+</script>
 </body>
 </html>
