--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -5,31 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nosotros/herreria antonutti</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="icon" type="jpg" href="../img/logo.navegador.png">
     
 </head>
 
 <body>
-    <header class="header">
-        <picture class="header__logo">
-            <img class="header__img" src="../img/logo.png" alt="logo de herreria amtonutti">
-        </picture>
-        <nav class="navegacion">
-            <ul class="menu">
-                 <li class="menu__list">
-                     <a class="menu__link" href="../index.html">inicio</a></li>
-                 <li class="menu__list">
-                     <a class="menu__link" href="./nosotros.html">nosotros</a></li>
-                 <li class="menu__list">
-                     <a class="menu__link" href="./aluminio.html">aluminio</a></li>
-                 <li class="menu__list">
-                     <a class="menu__link" href="./herreria.html">herreria</a></li>
-                 <li class="menu__list">
-                     <a class="menu__link" href="./contactos.html">contactos</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <picture class="header__logo">
+       <img class="header__img" src="../img/logo.png" alt="logo de herreria amtonutti">
+    </picture>
+    <nav class="navbar navbar-expand-md  navbar-dark">
+        <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span id="navegacion" class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aluminio.html">aluminio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="herreria.html">herreria</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactos.html">Contactos</a>
+            </li>
+          </ul>
+        </div>
+      </nav>         
+</header>
     <main>
             <section id="nosotros">
                                  <div class="contenedor">
@@ -59,9 +72,20 @@
                 <div class="encabezado">            
                                        <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
                                        <h3 class="encabezado__direccion">direcion:calle123</h3>
-                </div>   
-               <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
-        </section>
+                </div>
+                <div class="alert alert-danger" role="alert">    
+                  <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+                </div>
+                </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+   </script>
 </body>
 </html>
