--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -2,9 +2,10 @@
    /*Variables*/ 
    
    /* colors */
-    $primario: #87847A;
-    $secundario: #665656;
-    $alternativo: moccasin;
+    $primario: white;
+    $secundario:  #e7dfcf;
+    $alternativo:  #f1c477;
+    $titulo: hsl(45, 100%, 41%);
 
 
     
