--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,12 +1,37 @@
 /*footer*/ 
 footer{
-    @include flex (row , space-evenly);
-    width: 100vw;
-    height:100%;
-    background-color: $alternative;
+    width: 100%;
+    height:auto;
+    background-color: $alternativo;
     font-size: 20px;
+    display:flex;
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: 100%;
- 
-}
+    flex-direction: row;
+    justify-content: space-evenly;
+    border-top: 2px solid $secundario;
+    
+    .redes{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 15px;
+    
+    }
+    
+    .mapa {
+    display: flex;
+    justify-content: center;
+    padding: 15px;
+    }
+    
+    .encabezado{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    
+  }
+  
+  
