--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,80 +1,118 @@
-header {
-    display: flex;
-    background-color: #665656;
-    justify-content: space-around;
-    padding: 20px 0;
-    align-items: center;
-    border-bottom: 2px solid black;
+
+     
+   
+  
+
+
+
+
+
+body header {
+  
+  display: flex;
+  width:100%; 
+  background-color: $alternativo;
+  justify-content:space-around;
+  padding: 20px 0;
+  align-items: center;
+  border-bottom: 5px solid black;
+  
+  
+  .header__logo {
+    
+    height: 100%;
+    max-width: 200px;
+    display:flex;  
+    margin-left: 2rem;
+    box-shadow:
+    3px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    7.2px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    13.6px 12.5px 10px rgba(0, 0, 0, 0.035),
+    24.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    45.5px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    109px 100px 80px rgba(0, 0, 0, 0.07);
+    flex-basis: 20%;
+    }
+  
+  .navbar {
+    background-color:var();
+    font-size: 35px;
+  
+    #boton {
+      border-color: #727272;
+    }
+  
+    .collapse {
+     justify-content: center;
+     height: 100%;
+     width: 100%;
+     display: flex;
+     
+    
+     .navbar-nav li {
+       position: relative;
+       color: #1d1b1b;
+       
+     
+     }
+     
+   
+     .navbar-nav li::before { 
+       content: "";
+       height: 3px;
+       width: 0%;
+       background: $secundario;
+       position: absolute;
+       left: 18px;
+       bottom: 7px;
+       transition: 0.3s ease-out;
+     }
+     
+     .navbar-nav li:hover::before {
+       width: 70%;
+     }
+     header .navbar-dark .navbar-nav .nav-link {
+      color: #1d1b1b;
+       }
     
     
-        .navegacion{
-        flex-basis: 80%;
-        display:flex;
-        justify-content: space-between;
-      }
-      
-      
-      header .header__logo {
-        flex-basis: 20%;
-        
-      }
-      .header__logo {
-       width: 100%;
-       height: 100%;
-      }
-      
-      .header__img {
-      max-width: 200px;
-      display: flex;  
-      margin-left: 2rem;
-      box-shadow:
-        3px 2.8px 2.2px rgba(0, 0, 0, 0.02),
-        7.2px 6.7px 5.3px rgba(0, 0, 0, 0.028),
-        13.6px 12.5px 10px rgba(0, 0, 0, 0.035),
-        24.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
-        45.5px 41.8px 33.4px rgba(0, 0, 0, 0.05),
-        109px 100px 80px rgba(0, 0, 0, 0.07)
-      ; 
-      }
-      .menu ul li a {
-        list-style-type:none;
-      }
-      
-        nav .menu {
-        display: flex;
-        gap: map-get($spacings , $spacings-medium );
-        background-color: moccasin;
-        border: solid;
-        font-size: 40px; 
-        padding: 10px;
-        list-style-type:none;
-      }
-      
-      .menu__list:hover {
-       background-color: #5B474A;
-       transition: background-color 2s;
-      
-      }
-      
-      .menu .menu__link {
-        font-size:1em;
-        color: maroon;
-        list-style-type:none;
-      
-      }
-      
-      .solucion {
-        color: moccasin;
-        font-size: 40px;
-        padding: 2px;
-        margin: 5px; 
-      }
-      
-        section h2 {
-       font-size: 40px;
-       padding: 5px;
-       margin: 5px; 
-       justify-items:center;
-      }
+    
+
+
+    }
+  
+  
+  
   }
   
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+h2 {
+  font-size: 40px;   
+  padding: 5px;
+  margin: 5px; 
+  justify-items:center;
+} 
+
+
+
+
+
+
+
+
+
