--- a/views/aluminio.html
+++ b/views/aluminio.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aluminio/herreria antonutti</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="icon" type="jpg" href="../img/logo.navegador.png">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+     <link rel="stylesheet" href="../css/index.css">
+     <link rel="icon" type="jpg" href="../img/logo.navegador.png">
 </head>
 <body>
   <header>
     <picture class="header__logo">
-       <img class="header__img" src="../img/logo.png" alt="logo de herreria amtonutti">
+       <img class="header__img" src="../img/logo.PNG" alt="logo de herreria amtonutti">
     </picture>
     <nav class="navbar navbar-expand-md  navbar-dark">
         <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -43,58 +42,118 @@
       </nav>         
 </header>
     
-    <main class="container">
-         <article class="seccion__aluminio animate__animated animate__fadeInLeft">
-                     <h1 class="aluminio__herreria">aluminio</h1>
-                     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit facere, sequi, deserunt perferendis dicta neque quidem dignissimos facilis architecto distinctio quibusdam beatae delectus excepturi quo labore. Qui voluptas cumque pariatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aut maiores laboriosam ex numquam asperiores delectus exercitationem a, et corrupti ab facilis quasi deleniti voluptatem quaerat quod odit cum similique?</p>
-        </article>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-              <div class="carousel-item active">
-                  <img class="d-block w-100" src="../img/herreria.mesa.png" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block w-100" src="../img/aluminio.puerta.png" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block w-100" src="../img/herreria.techo.png" alt="Third slide">
-              </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-          </a>
-      </div>
+<main class="container">
+  <div class="div__aluminio__herreria">
+  <article class="animate__animated animate__fadeInLeft">
+               <h1 class="aluminio__herreria__titulo">aluminio</h1>
+               <p class="herreria__texto">Realizamos trabajos de aluminio a medida, permitiendo combinarlas con vidrios de seguridad transparentes, esmerilados u otros. tambien Contamos con barandas para piletas, balcones, escaleras, entre pisos, terrazas. Mira los distintos modelos de perfiles y trabajos en esta sección.</p>
+  </article>
+ </div> 
+  <article>
+   <h2 class="caja__titulo">perfiles y galeria de trabajos</h2>
+  </article>
+  <section class="caja">
+       
+       <div class="cuadro">
+             <picture>
+                      <img class="cuadro__img" src="../img/aluar-A40 1 200x150.png" alt="">
+             </picture>
+             <h3 class="cuadro__titulo">ALUAR-A40</h3>
+             <p class="cuadro__texto"> En este nuevo producto, calidad, tecnología y sustentabilidad se unen para lograr un innovador sistema con excelentes niveles de aislamiento térmico, mayor hermeticidad y un altísimo ahorro energético. El sistema A40 RPT resulta una evolución de una línea de alta prestación como lo es la A40 al fusionarse con la tecnología de vanguardia de Ruptura de puente Térmico.</p>
+       </div>
+       <div class="cuadro" >            
+             <pircture>
+                        <img class="cuadro__img" src="../img/curtain-wall 150X200.png" alt="">
+             </pircture>
+             <h3 class="cuadro__titulo">CURTAIN WALL</h3>
+             <p class="cuadro__texto">El sistema es modular, compuesto por medias columnas y travesaños para el armado de módulos completos colgados del borde de la losa mediante anclajes especiales regulables. Admite colocación de DVH con vidrio pegado con silicona estructural, logrando superficies completamente vidriadas desde el exterior. Tres variantes (Frame 120, Frame 140 y Frame180) de acuerdo a la inercia necesaria y las condicionantes del edificio.</p>
+       </div>
+       <div class="cuadro">        
+            <pircture>
+                      <img class="cuadro__img" src="../img/aluar-herrero 150X200.png" alt="">
+            </pircture>
+            <h3 class="cuadro__titulo">ALUAR-HERRERO</h3>
+            <p class="cuadro__texto">El sistema dispone de la tipología corrediza alzante diseñada para sintetizar la funcionalidad de una tipología corrediza con la hermeticidad de una batiente debido a la utilización del mecanismo alzante. La ventaja principal es que al accionar la falleba en posición cerrado la hoja desciende permitiendo un cierre hermético de los burletes de la hoja con el marco.</p>
+       </div>           
+   </section>
+   <section>
+     <div class="galeriaherreria">
+       <picture class="imgherreria">
+         <img src="../img/alu__mesa pergola 2 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu_pergola 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu_pergolanoche 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu__casa290X290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu__montaña 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu__portonabierto 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu__puertaabierta 290x290.png " alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu__quincho 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu__ventana2 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu__ventanacostado 1 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu__ventanabaño 1 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu_ventana 1 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu_ventanal 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu_ventanal 1 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+       <picture class="imgherreria">
+         <img src="../img/alu_puertamuestra 290x290.png" alt="" class="imgherreria__cuadro">
+       </picture>
+     </div>
+   </section>
 </main>
 <footer >
-    <section>
-            <div class="encabezado">            
-                                   <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
-                                   <h3 class="encabezado__direccion">direcion:calle123</h3>
-            </div>
-            <div class="alert alert-danger" role="alert">
-           <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
-        </div>
+  <section>
+          <div class="redes">     
+                                  <a class="redes__instagram" href="https://www.instagram.com/herreriaantonutti/"><span class="iconify-inline" data-icon="fa:instagram" data-width="40" data-height="40"></span></a>
+                                 <a class="redes__facebook" href="https://www.facebook.com/profile.php?id=100063582010551"> <span class="iconify" data-icon="fa6-brands:facebook-square" data-width="40" data-height="40"></span></a>
+                                 <a class="redes__whatsapp" href="https://api.whatsapp.com/send?phone=543513141058" target="_blank"><span class="iconify-inline" data-icon="icomoon-free:whatsapp" data-width="40"></span></a>
+          </div>
+          <div class="mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850.8258429315946!2d-64.09083887075876!3d-31.460839898836813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432bc661558ec31%3A0xd6269b772dec9f!2sGramme%205178%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1657575718981!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <div class="encabezado">            
+            <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
+            <h3 class="encabezado__direccion">direcion: gramme 5178</h3>
 
-    </section>
+<div class="alert alert-danger" role="alert">
+            <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+</div>                  
+ </section>
 </footer> 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
-        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
-    </script> 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-</script>
+<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+ </script>
+ <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+ </script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+     integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+ </script>
 </body>
 </html>
