--- a/views/contactos.html
+++ b/views/contactos.html
@@ -5,7 +5,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>aluminio/herreria antonutti</title>
+     <title>contacto/herreria antonutti</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -44,13 +44,10 @@
       </nav>         
 </header>
     <main>      
-              <section class="contacto">
-                
-                  <div class="formulario gradient-border">
-                    <article class="venta animate__fadeInUpBig">
-                      <h2 >Nos encantaria saber en que te podemos ayudar. solicita tu presupuesto sin cargo en el siguiente formulario con tus datos y nos comunicaremos lo mas rapido posible. Muchas gracias.</h1>
-                      <img class="llamada" src="../img/nosotros.llamada.jpg" alt="mujer hablando por telefono">
-                      </article>
+          <section>
+                    <h1 class="contactos">COMUNICATE CON NOSOTROS</h1>
+                    <h2 class="contactos">Envianos un mensaje indicando el motivo de tu contacto.Te contactaremos a la brevedad.
+                    </h2>
                     <form action="enviar.php" method="post">
                         <input class="nombre" type="text" required placeholder=" Nombre">
                         <input class="apellido" type="text" required placeholder=" Apellido">
@@ -60,23 +57,32 @@
                             placeholder=" Mensaje..."></textarea>
                         <input id="enviar" type="submit" value="Enviar">
                     </form>
-                </div>
+          </section>
               
-              </section>
+              
+              
     </main> 
 
-    <footer>
+    <footer >
       <section>
-              <div class="encabezado">            
-                                     <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
-                                     <h3 class="encabezado__direccion">direcion:calle123</h3>
+              <div class="redes">     
+                                      <a class="redes__instagram" href="https://www.instagram.com/herreriaantonutti/"><span class="iconify-inline" data-icon="fa:instagram" data-width="40" data-height="40"></span></a>
+                                     <a class="redes__facebook" href="https://www.facebook.com/profile.php?id=100063582010551"> <span class="iconify" data-icon="fa6-brands:facebook-square" data-width="40" data-height="40"></span></a>
+                                     <a class="redes__whatsapp" href="https://api.whatsapp.com/send?phone=543513141058" target="_blank"><span class="iconify-inline" data-icon="icomoon-free:whatsapp" data-width="40"></span></a>
               </div>
-              <div class="alert alert-danger" role="alert">
-             <p>esta pagina web es sin fines de lucro . todos los derechos reservados </p>
-          </div>
-  
-      </section>
-  </footer>
+              <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850.8258429315946!2d-64.09083887075876!3d-31.460839898836813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432bc661558ec31%3A0xd6269b772dec9f!2sGramme%205178%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1657575718981!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+              <div class="encabezado">            
+                <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
+                <h3 class="encabezado__direccion">direcion: gramme 5178</h3>
+
+<div class="alert alert-danger" role="alert">
+                <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+</div>                  
+     </section>
+  </footer> 
+  <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
