--- a/views/herreria.html
+++ b/views/herreria.html
@@ -5,7 +5,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>aluminio/herreria antonutti</title>
+     <title>herreria/herreria antonutti</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -15,7 +15,7 @@
  <body>
   <header>
     <picture class="header__logo">
-       <img class="header__img" src="../img/logo.png" alt="logo de herreria amtonutti">
+       <img class="header__img" src="../img/logo.PNG" alt="logo de herreria amtonutti">
     </picture>
     <nav class="navbar navbar-expand-md  navbar-dark">
         <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -44,56 +44,131 @@
 </header>
      
      <main class="container">
-          <article class="seccion__aluminio animate__animated animate__fadeInLeft">
-                      <h1 class="aluminio__herreria">herreria</h1>
-                      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit facere, sequi, deserunt perferendis dicta neque quidem dignissimos facilis architecto distinctio quibusdam beatae delectus excepturi quo labore. Qui voluptas cumque pariatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aut maiores laboriosam ex numquam asperiores delectus exercitationem a, et corrupti ab facilis quasi deleniti voluptatem quaerat quod odit cum similique?</p>
+         <div class="div__aluminio__herreria">
+         <article class="animate__animated animate__fadeInLeft">
+                      <h1 class="aluminio__herreria__titulo">herreria</h1>
+                      <p class="herreria__texto"> Brindamos soluciones con todos nuestros productos para la arquitectura de su vivienda, industria o empresa. materiales de alta calidad y un servicio especializado. Integramos en su proyecto todos nuestros productos y trayectoria que ofrecerán las soluciones técnicas y estéticas que su obra necesita.</p>
          </article>
-         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-           <ol class="carousel-indicators">
-               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-           </ol>
-           <div class="carousel-inner">
-               <div class="carousel-item active">
-                   <img class="d-block w-100" src="../img/aluminio.ventana.simple.jpg" alt="First slide">
-               </div>
-               <div class="carousel-item">
-                   <img class="d-block w-100" src="../img/herreria.reja.png " alt="Second slide">
-               </div>
-               <div class="carousel-item">
-                   <img class="d-block w-100" src="../img/herreria.techo.png" alt="Third slide">
-               </div>
-           </div>
-           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-               <span class="sr-only">Previous</span>
-           </a>
-           <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-               <span class="sr-only">Next</span>
-           </a>
-       </div>
- 
+        </div> 
+         <article>
+          <h2 class="caja__titulo">materiales de construccion y galeria de trabajos</h2>
+         </article>
+         <section class="caja">
+              
+              <div class="cuadro">
+                    <picture>
+                             <img class="cuadro__img" src="../img/perfiles 150px.png" alt="">
+                    </picture>
+                    <h3 class="cuadro__titulo">perfiles</h3>
+                    <p class="cuadro__texto"> perfiles UPN - perfiles IPN</p>
+              </div>
+              <div class="cuadro" >            
+                    <pircture>
+                               <img class="cuadro__img" src="../img/chapas 150px.png" alt="">
+                    </pircture>
+                    <h3 class="cuadro__titulo">chapas</h3>
+                    <p class="cuadro__texto">cahapas lisas-chaspas acanaladas</p>
+              </div>
+              <div class="cuadro">        
+                   <pircture>
+                             <img class="cuadro__img" src="../img/mallas-metalicas 150px.png" alt="">
+                   </pircture>
+                   <h3 class="cuadro__titulo">mallas metalicas</h3>
+                   <p class="cuadro__texto">mallas para la construccion</p>
+              </div>
+              <div class="cuadro">
+                  <pircture>
+                           <img class="cuadro__img" src="../img/perfiles-c 150px.png" alt="">
+                  </pircture>
+                  <h3 class="cuadro__titulo">perfiles-c</h3>
+                  <p class="cuadro__texto">perfiles C- perfiles</p>
+              </div>
+              <div class="cuadro">
+                   <pircture>
+                            <img class="cuadro__img" src="../img/tubos-estructurales 150px.png" alt="">
+                  </pircture>
+                  <h3 class="cuadro__titulo">tubos</h3>
+                  <p class="cuadro__texto">redondos-cuadrados-rectangulares</p>
+              </div>
+              <div class="cuadro">
+                  <pircture>
+                            <img class="cuadro__img" src="../img/construccion-y-herreria 150px.png" alt="">
+                  </pircture>
+                  <h3 class="cuadro__titulo">hierros</h3>
+                  <p class="cuadro__texto"> planchuelas-redondos-cuadrados </p>
+              </div>            
+          </section>
+          <section>
+            <div class="galeriaherreria">
+              <picture class="imgherreria">
+                <img src="../img/asador de frente290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/asadorcostado290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/escalones-CARACOL290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/lavamanos290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/lavamanos-on290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/portonmasrejas290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/puerta reja patio290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/puertaoxidad de frente290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/puertamadera290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/puertamaderaabierta290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/rejas plachuelas hierro cuadrado290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/techo de perfiles 290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/techo terminaciones 290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/techomachimbre290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+              <picture class="imgherreria">
+                <img src="../img/techomachimbrearriba290x290.png" alt="" class="imgherreria__cuadro">
+              </picture>
+            </div>
+          </section>
     </main>
    
-    <footer>
-     <section>
-             <div class="encabezado">            
-                                    <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
-                                    <h3 class="encabezado__direccion">direcion:calle123</h3>
-             </div>
-             <div class="alert alert-danger" role="alert">
-            <p>esta pagina web es sin fines de lucro . todos los derechos reservados </p>
-         </div>
- 
+    <footer >
+      <section>
+              <div class="redes">     
+                                      <a class="redes__instagram" href="https://www.instagram.com/herreriaantonutti/"><span class="iconify-inline" data-icon="fa:instagram" data-width="40" data-height="40"></span></a>
+                                     <a class="redes__facebook" href="https://www.facebook.com/profile.php?id=100063582010551"> <span class="iconify" data-icon="fa6-brands:facebook-square" data-width="40" data-height="40"></span></a>
+                                     <a class="redes__whatsapp" href="https://api.whatsapp.com/send?phone=543513141058" target="_blank"><span class="iconify-inline" data-icon="icomoon-free:whatsapp" data-width="40"></span></a>
+              </div>
+              <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850.8258429315946!2d-64.09083887075876!3d-31.460839898836813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432bc661558ec31%3A0xd6269b772dec9f!2sGramme%205178%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1657575718981!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+              <div class="encabezado">            
+                <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
+                <h3 class="encabezado__direccion">direcion: gramme 5178</h3>
+
+<div class="alert alert-danger" role="alert">
+                <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+</div>                  
      </section>
- </footer>
- <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
- </script>
- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </footer> 
+  <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
  </script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
      integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
