--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nosotros/herreria antonutti</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/index.css">
@@ -44,41 +44,58 @@
       </nav>         
 </header>
     <main>
-            <section id="nosotros">
-                                 <div class="contenedor">
-                                                        <picture>
-                                                            <img class="contenedor__diseñador" src="../img/nosotros_diseñando.jpg" alt="herrero diseñando planos">  
-                                                        </picture> 
-                                                            <article class="texto">
-                                                       <article>     
-                                                           <h2 class="contenedor__titulo">herreria</h2>      
-                                                           <p class="contenedor__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dicta magnam quia pariatur exercitationem vero fuga esse, soluta suscipit dolorem quisquam quaerat excepturi libero consectetur hic numquam? Asperiores, unde alias!</p>
-                                                       </article>
+       
+                              <section id="nosotros" >
+                                 
+                                  <div class="contenedor">
+                                  <picture>
+                                      <img class="contenedor__diseñador" src="../img/nosotros_diseñando.jpg" alt="herrero diseñando planos">  
+                                  </picture> 
+                                  <article class="texto">   
+                                     <h2 class="contenedor__titulo">QUIÉNES SOMOS</h2>      
+                                     <p class="contenedor__parrafo">
+                                      Somos una pyme, que cuenta con más de 15 años de trayectoria en el rubro. Realizamos trabajos de calidad totalmente enfocados en la necesidad de nuestros clientes. 
+                                      Nuestro personal posee la experiencia necesaria para brindar un servicio efectivo y garantizar la seguridad y la estetica de su hogar.</p>
+                                 </article>
                                  </div>
-                                <div class="contenedor">
-                                                        <picture>
-                                                            <img class="contenedor__equipo" src="../img/nosotros.trabajo.PNG" alt="dos personas trabajando con una puerta de aluminio" >
-                                                        </picture>
-                                                        <article> 
-                                                            <h2 class="contenedor__titulo">aluminio</h2>
-                                                            <p class="contenedor__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dicta magnam quia pariatur exercitationem vero fuga esse, soluta suscipit dolorem quisquam quaerat excepturi libero consectetur hic numquam? Asperiores, unde alias!</p>
-                                                        </article>   
-                                </div>
-            </section>    
-
+                                  <div class="contenedor">
+                                  <picture>
+                                      <img class="contenedor__equipo" src="../img/nosotros.trabajo.PNG" alt="dos personas trabajando con una puerta de aluminio" >
+                                  </picture>
+                                  <article> 
+                                      <h2 class="contenedor__titulo">INNOVACION</h2>
+                                      <p class="contenedor__parrafo">empezamos a atravesar un proceso de profesionalización que se va acentuando a medida que la empresa crece y con la complejidad de los proyectos que cada vez era más común gracias a la confianza que nos tenían nuestros clientes.</p>
+                                  </article>   
+                                  </div>                     
+                                
+                                 </section>    
+          
     </main>
-    <footer class="footer">
-        <section >
-                <div class="encabezado">            
-                                       <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
-                                       <h3 class="encabezado__direccion">direcion:calle123</h3>
-                </div>
-                <div class="alert alert-danger" role="alert">    
-                  <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
-                </div>
-                </section>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    <footer >
+      <section>
+              <div class="redes">     
+                                      <a class="redes__instagram" href="https://www.instagram.com/herreriaantonutti/"><span class="iconify-inline" data-icon="fa:instagram" data-width="40" data-height="40"></span></a>
+                                     <a class="redes__facebook" href="https://www.facebook.com/profile.php?id=100063582010551"> <span class="iconify" data-icon="fa6-brands:facebook-square" data-width="40" data-height="40"></span></a>
+                                     <a class="redes__whatsapp" href="https://api.whatsapp.com/send?phone=543513141058" target="_blank"><span class="iconify-inline" data-icon="icomoon-free:whatsapp" data-width="40"></span></a>
+              </div>
+              <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850.8258429315946!2d-64.09083887075876!3d-31.460839898836813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432bc661558ec31%3A0xd6269b772dec9f!2sGramme%205178%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1657575718981!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+              <div class="encabezado">            
+                <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
+                <h3 class="encabezado__direccion">direcion: gramme 5178</h3>
+
+<div class="alert alert-danger" role="alert">
+                <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+</div>                  
+     </section>
+  </footer> 
+  <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>  
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
