entrega_trabajo_final

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -12,7 +12,8 @@
 /*PAGES*/
 @import './pages/inicio';
 @import './pages/nosotros';
-@import './pages/aluminio';
-@import './pages/herreria';
+@import './pages/herreria__aluminio';
 @import './pages//contacto';
 
+/*MEDIAQUERIES*/
+@import './misc/mediaqueries';
