--- a/sass/pages/_contacto.scss
+++ b/sass/pages/_contacto.scss
@@ -11,12 +11,10 @@
     flex-wrap: wrap;
     padding: 15px;
     margin-top: $spacings-medium;
-    
-    
-  }
+   
+    }
    
   form {
-    display: -ms-grid;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 4fr 1fr;
@@ -30,8 +28,15 @@
     margin-bottom: 10px;
     justify-items: center;
     align-items: center;
-    
-    form textarea {
+    background: rgba( 255, 255, 255, 0 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
+    backdrop-filter: blur( 20px );
+    -webkit-backdrop-filter: blur( 20px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 2px solid black;
+     
+    textarea {
       border-radius: 15px;
       resize: none;
       width: 95%;
@@ -41,7 +46,7 @@
       font-family: 'Times New Roman', Times, serif;
     }
     
-    form input {
+     input {
       height: 40px;
       width: 95%;
       margin-top: 5px;
