--- a/views/aluminio.html
+++ b/views/aluminio.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-     <link rel="stylesheet" href="../css/index.css">
+     <link rel="stylesheet" href="../css/translated.css">
      <link rel="icon" type="jpg" href="../img/logo.navegador.png">
 </head>
 <body>
   <header>
     <picture class="header__logo">
-       <img class="header__img" src="../img/logo.PNG" alt="logo de herreria amtonutti">
+       <img class="header__img" src="../img/logo.PNG" alt="logo de herreria antonutti">
     </picture>
     <nav class="navbar navbar-expand-md  navbar-dark">
         <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -41,36 +41,35 @@
         </div>
       </nav>         
 </header>
-    
 <main class="container">
   <div class="div__aluminio__herreria">
   <article class="animate__animated animate__fadeInLeft">
                <h1 class="aluminio__herreria__titulo">aluminio</h1>
                <p class="herreria__texto">Realizamos trabajos de aluminio a medida, permitiendo combinarlas con vidrios de seguridad transparentes, esmerilados u otros. tambien Contamos con barandas para piletas, balcones, escaleras, entre pisos, terrazas. Mira los distintos modelos de perfiles y trabajos en esta sección.</p>
   </article>
- </div> 
-  <article>
-   <h2 class="caja__titulo">perfiles y galeria de trabajos</h2>
-  </article>
+  </div> 
+    <article>
+      <h2 class="caja__titulo">perfiles y galeria de trabajos</h2>
+    </article>
   <section class="caja">
        
        <div class="cuadro">
              <picture>
-                      <img class="cuadro__img" src="../img/aluar-A40 1 200x150.png" alt="">
+                      <img class="cuadro__img" src="../img/aluar-A40 1 200x150.png" alt="muestra de perfil de aluminio cortado marca y modelo aluar-A40">
              </picture>
              <h3 class="cuadro__titulo">ALUAR-A40</h3>
              <p class="cuadro__texto"> En este nuevo producto, calidad, tecnología y sustentabilidad se unen para lograr un innovador sistema con excelentes niveles de aislamiento térmico, mayor hermeticidad y un altísimo ahorro energético. El sistema A40 RPT resulta una evolución de una línea de alta prestación como lo es la A40 al fusionarse con la tecnología de vanguardia de Ruptura de puente Térmico.</p>
        </div>
        <div class="cuadro" >            
              <pircture>
-                        <img class="cuadro__img" src="../img/curtain-wall 150X200.png" alt="">
+                        <img class="cuadro__img" src="../img/curtain-wall 150X200.png" alt="muestra de perfil de aluminio cortado marca curtain-wall">
              </pircture>
              <h3 class="cuadro__titulo">CURTAIN WALL</h3>
              <p class="cuadro__texto">El sistema es modular, compuesto por medias columnas y travesaños para el armado de módulos completos colgados del borde de la losa mediante anclajes especiales regulables. Admite colocación de DVH con vidrio pegado con silicona estructural, logrando superficies completamente vidriadas desde el exterior. Tres variantes (Frame 120, Frame 140 y Frame180) de acuerdo a la inercia necesaria y las condicionantes del edificio.</p>
        </div>
        <div class="cuadro">        
             <pircture>
-                      <img class="cuadro__img" src="../img/aluar-herrero 150X200.png" alt="">
+                      <img class="cuadro__img" src="../img/aluar-herrero 150X200.png" alt="muestra de perfil de aluminio cortado marca aluar-herrero ">
             </pircture>
             <h3 class="cuadro__titulo">ALUAR-HERRERO</h3>
             <p class="cuadro__texto">El sistema dispone de la tipología corrediza alzante diseñada para sintetizar la funcionalidad de una tipología corrediza con la hermeticidad de una batiente debido a la utilización del mecanismo alzante. La ventaja principal es que al accionar la falleba en posición cerrado la hoja desciende permitiendo un cierre hermético de los burletes de la hoja con el marco.</p>
@@ -79,49 +78,49 @@
    <section>
      <div class="galeriaherreria">
        <picture class="imgherreria">
-         <img src="../img/alu__mesa pergola 2 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu__mesa pergola 2 290x290.png" alt="pergola con termianciones finas terminaciones desde una vista de frente" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu_pergola 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu_pergola 290x290.png" alt="pergola con termianciones finas terminaciones  desde una vista de frente mas sercano" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu_pergolanoche 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu_pergolanoche 290x290.png" alt="pergola con termianciones finas terminaciones  desde una vista de frente de noche" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu__casa290X290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu__casa290X290.png" alt="casa ventanas de aluminio color blancas mate" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu__montaña 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu__montaña 290x290.png" alt="quincho ubicado en las sierras con ventanales de aluminio " class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu__portonabierto 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu__portonabierto 290x290.png" alt="porton de aluminio de 3 hojas" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu__puertaabierta 290x290.png " alt="" class="imgherreria__cuadro">
+         <img src="../img/alu__puertaabierta 290x290.png" alt="puerta de aluminio abieta" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu__quincho 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu__quincho 290x290.png" alt="foto tomada del interior de un quincho" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu__ventana2 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu__ventana2 290x290.png" alt="foto tomada desde adentro de una ventana de aluminio" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu__ventanacostado 1 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu__ventanacostado 1 290x290.png" alt="foto tomada desde adentro por el costado de una ventana de aluminio" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu__ventanabaño 1 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu__ventanabaño 1 290x290.png" alt="ventana de aluminio de un baño" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu_ventana 1 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu_ventana 1 290x290.png" alt="foto tomadada desde adentro de una ventanda de aluminio" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu_ventanal 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu_ventanal 290x290.png" alt="foto de un ventanal tomada de una habitacion" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu_ventanal 1 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu_ventanal 1 290x290.png" alt="foto de un ventanal de una coccina" class="imgherreria__cuadro">
        </picture>
        <picture class="imgherreria">
-         <img src="../img/alu_puertamuestra 290x290.png" alt="" class="imgherreria__cuadro">
+         <img src="../img/alu_puertamuestra 290x290.png" alt="puerta de aluminio abierta" class="imgherreria__cuadro">
        </picture>
      </div>
    </section>
@@ -139,11 +138,10 @@
           <div class="encabezado">            
             <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
             <h3 class="encabezado__direccion">direcion: gramme 5178</h3>
-
-<div class="alert alert-danger" role="alert">
-            <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
-</div>                  
- </section>
+            <div class="alert alert-danger" role="alert">
+                 <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+            </div>                  
+   </section>
 </footer> 
 <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
