--- a/sass/pages/_inicio.scss
+++ b/sass/pages/_inicio.scss
@@ -1,8 +1,4 @@
 
-
-
-
-
 .grilla {
   width: 100%;
   height: 100%;
@@ -11,28 +7,57 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows:  0.75fr 0.5fr;
   gap: 2rem ;
-  align-items: center;
   grid-auto-flow: row;
   margin-top: $spacings-large;
   grid-template-areas:
   "bienvenida bienvenida trabajos"
   "presentacion presentacion presentacion";
+  
+.bienvenida { grid-area: bienvenida; }
+
+.trabajos { grid-area: trabajos; }
+
+.presentacion { grid-area: presentacion; }
+
+ 
+.solucion {
+  color: $alternativo;
+  width: 100%;
+  height: 50%;
+  font-size: 40px;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  padding: 2px;
+  margin: 5px; 
+  text-shadow: 2px 2px #111111;
+ 
+  .bienvenida{
   width: 100%;
   height: 100%;
   font-size: 30px;
   display: grid;
   justify-items: center;
-  
-  .solucion {
-    color: $alternativo;
-    width: 100%;
-    height: 50%;
-    font-size: 40px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    padding: 2px;
-    margin: 5px; 
-    text-shadow: 2px 2px #111111;
-  }
+  }   
+}
+    
+
+
+
+
+
+
+.card-body{
+  padding: 15px;
+  margin-top: $spacings-large;
+  display: flex;
+  font-size: 35px;
+  flex-direction: column;
+  box-shadow:
+  3px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+  7.2px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+  13.6px 12.5px 10px rgba(0, 0, 0, 0.035),
+  24.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+  45.5px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+  109px 100px 80px rgba(0, 0, 0, 0.07);
   
   
   .card-title{
@@ -40,289 +65,8 @@
     font-size: 40px;
     padding: 2px;
     margin: 5px; 
-  }
-  
-  .card { 
-    margin-left: auto; 
-    margin-right: auto;
-    margin-top: 2rem;
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
-    backdrop-filter: blur( 20px );
-    -webkit-backdrop-filter: blur( 20px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-    border: 2px solid black;
-  } 
-  
-  .card-body{
-    padding: 15px;
-    margin-top: var(--spacings-large);
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
-    backdrop-filter: blur( 20px );
-    -webkit-backdrop-filter: blur( 20px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-    border: 2px solid black;
-  }  
-} 
-
-
-
-
-
-
-.trabajos {
-  font-size: 10px;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  display: grid;
-  justify-items: center;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;  
-  
-  
-  
-  .trabajos__cartas{
-    height:100%;
-    width: 100%;
-    align-self: stretch;
-    background-size:cover;
-    
-    &__soldador{
-      width: 300px;
-      height: 300px;
-      margin: 20px;
-      padding: 24px;
-      box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
-      backdrop-filter: blur( 20px );
-      -webkit-backdrop-filter: blur( 20px );
-      border-radius: 10px;
-      border: 1px solid rgba( 255, 255, 255, 0.18 );
-      border: 2px solid black;
-      
-      
-    }
-    
-    &__perfil{
-      width: 300px;
-      height: 300px;
-      margin: 20px;
-      padding: 24px;
-      box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
-      backdrop-filter: blur( 20px );
-      -webkit-backdrop-filter: blur( 20px );
-      border-radius: 10px;
-      border: 1px solid rgba( 255, 255, 255, 0.18 );
-      border: 2px solid black;
-      
-    }
-    
-    &__regla {
-      width: 300px;
-      height: 300px;
-      margin: 20px;
-      padding: 24px;
-      box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
-      backdrop-filter: blur( 20px );
-      -webkit-backdrop-filter: blur( 20px );
-      border-radius: 10px;
-      border: 1px solid rgba( 255, 255, 255, 0.18 );
-      border: 2px solid black;
-      
-      
-    }
-    .box-shadow { 
-      background: rgba( 255, 255, 255, 0 );
-      box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
-      backdrop-filter: blur( 20px );
-      -webkit-backdrop-filter: blur( 20px );
-      border-radius: 10px;
-      border: 1px solid rgba( 255, 255, 255, 0.18 );
-      border: 2px solid black; ;
-    }
-    
-    &__titulo{
-      margin:10px; 
-      font-size: 35px;
-      
-    } 
-    
-    &__texto {
-      margin: 25px;
-      font-size: 15px;
-    } 
-    
-  }  
-  
-  
-}  
-
-
-.presentacion {
-  width:100%; 
-  height:100%;
-  display:flex;
-  flex-direction: column;
-  justify-items: center;
-  align-items: center; 
-  
-  &__pregunta {
-    display: flex;
-    font-size: 50px;
-    padding: 30px;
-    
-  } 
-  
-  
-  &__perforando {
-    display:flex;
-    width: 90%;
-    height: 90%;
-    margin-bottom: 30px;
-    
-    
-  }  
-  
-  &__resenia {
-    font-size: 20px;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    margin-bottom: $spacings-medium; 
-    
-  } 
-  
-}
-.bienvenida { grid-area: bienvenida; }
-
-.trabajos { grid-area: trabajos; }
-
-.presentacion { grid-area: presentacion; }
-   
-.bienvenida{
-}  
-/* MEDIA HEADER */
-
-@media screen and (max-width: 1100px){ 
-  header nav .menu {
-    display:flex;
-    flex-direction:column;
-    font-size: 40px;
-    gap: 2rem;
-  }
-}
-@media  (max-width:916px)  {
-  header {
-    
-    display:flex;
-    width: 100%;
-    flex-direction:column;
-    flex-basis: 100%; 
-    flex-grow: 1;
-    flex-shrink: 1;
-    gap: 2rem;
-  }
-  
-}
-
-@media  (max-width:534px)  {
-  header {
-
-  display:flex;
-  width: 100%;
-  flex-direction:column;
-   flex-basis: 100%; 
-  flex-grow: 1;
-  gap: 2rem;
-}
- }
-/* MEDIA INDEX */
-@media (max-width: 992px){
-  .grilla{
-    display: grid;
-    width:100%;
-    height: auto;
-    grid-template-columns: 1fr  ;
-    grid-template-rows: 0.5fr 1fr 0.5fr  ;
-    gap: 1em;
-    grid-auto-flow: row;
-    grid-template-areas:
-    "bienvenida "
-    "trabajos"
-    "presentacion";
-  }
-
-  .presentacion__perforando {
-    display:flex;
-    width: 70%;
-    height: 40%;
-    margin-bottom: 30px;
-    
-    
-  }  
-
-  }
-
-@media (max-width: 355px){
-  .grilla{
-    display: grid;
-    width:100%;
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr 1fr 0.5fr  ;
-    gap: 1em;
-    grid-auto-flow: row;
-    
-    grid-template-areas:
-    "bienvenida "
-    "trabajos"
-    "presentacion";
-  }
-   
-
  
-.solucion {
-  color: $alternativo;
-  width: 90%;
-  height: 50%;
-  font-size: 20px;
-  font-family:Georgia, 'Times New Roman', Times, serif;
-  padding: 2px;
-  margin: 3px; 
-  text-shadow: 2px 2px #111111;
-}
-    
-
-.card-title{
-  color: $alternativo;
-  font-size: 30px;
-  padding: 2px;
-  margin: 5px; 
-}
-    
-    
-    .bienvenida{
-  width: 100%;
-  height: 100%;
-  display: grid;
-  justify-items: center;
-}   
-
-
-
-div .card-body{
-  font-size: 20px;
-  padding: 10px;
-  margin-top: $spacings-large;
-  display: flex;
-  flex-direction: column;
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
-  backdrop-filter: blur( 20px );
-  -webkit-backdrop-filter: blur( 20px );
-  border-radius: 10px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
-  border: 2px solid black;
+  }
 }  
 
 
@@ -334,6 +78,12 @@ div .card-body{
   display: grid;
   justify-items: center;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;  
+
+
+
+
+
+
 }  
 
 
@@ -343,65 +93,35 @@ div .card-body{
   align-self: stretch;
   background-size:cover;
   
+  .trabajos__cuadro{
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    padding: 24px;
+    background: rgba( 255, 255, 255, 0 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
+    backdrop-filter: blur( 20px );
+    -webkit-backdrop-filter: blur( 20px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 2px solid black;
+    
+  }
   
+  .trabajos__titulo{
+    margin:10px; 
+    font-size: 35px;
+    
+  } 
+  
+  .trabajos__texto {
+    margin: 25px;
+    font-size: 17px;
+  }  
 }  
 
-.trabajos__soldador{
-  width: 250px;
-  height: 250px;
-  margin: 20px;
-  padding: 24px;
-  background: rgba( 255, 255, 255, 0 );
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
-  backdrop-filter: blur( 20px );
-  -webkit-backdrop-filter: blur( 20px );
-  border-radius: 10px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
-  border: 2px solid black;
-  
-  
-}
 
-.trabajos__perfil{
-  width: 250px;
-  height: 250px;
-  margin: 20px;
-  padding: 24px;
-  background: rgba( 255, 255, 255, 0 );
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
-  backdrop-filter: blur( 20px );
-  -webkit-backdrop-filter: blur( 20px );
-  border-radius: 10px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
-  border: 2px solid black;
-  
-}
 
-.trabajos__regla {
-  width: 250px;
-  height: 250px;
-  margin: 20px;
-  padding: 24px;
-  background: rgba( 255, 255, 255, 0 );
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
-  backdrop-filter: blur( 20px );
-  -webkit-backdrop-filter: blur( 20px );
-  border-radius: 10px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
-  border: 2px solid black;
-  
-}
-
-.trabajos__titulo{
-  margin:10px; 
-  font-size: 30px;
-  
-} 
-
-.trabajos__texto {
-  margin: 20px;
-  font-size: 18px;
-}  
 
 
 
@@ -411,48 +131,41 @@ div .card-body{
   display:flex;
   flex-direction: column;
   justify-items: center;
-  align-items: center;
+  align-items: center; 
+  .presentacion__pregunta {
+    display: flex;
+    font-size: 50px;
+    padding: 30px;
+    margin-bottom: 18px;
+    background: rgba( 255, 255, 255, 0 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  
+    backdrop-filter: blur( 20px );
+    -webkit-backdrop-filter: blur( 20px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 2px solid black;
+    
+  } 
   
   
+  .presentacion__perforando {
+    display:flex;
+    width: 90%;
+    height: 90%;
+    margin-bottom: 30px;
+    
+    
+  }  
   
-  
+  .presentacion__resenia {
+    font-size: 20px;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    margin-bottom:$spacings-medium; 
+    
+  } 
 }  
-
-.presentacion__pregunta {
-  display: flex;
-  font-size: 35px;
-  padding: 20px;
-  
-} 
-
-
-.presentacion__perforando {
-  display:flex;
-  padding: 5px;
-  width: 100%;
-  height: 30%;
-  margin-bottom: 10px;
-  
-  
-}  
-
-.presentacion__resenia {
-  font-size: 17px;
-  width: 100%;
-  height: 100%;
-  padding: 15px;
- 
-  
-} 
 
 
 }
-    
-      
-  
-     
-  
-     
-     
-     
-    
