--- a/views/contactos.html
+++ b/views/contactos.html
@@ -9,14 +9,13 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-     <link rel="stylesheet" href="../css/index.css">
+     <link rel="stylesheet" href="../css/translated.css">
      <link rel="icon" type="jpg" href="../img/logo.navegador.png">
 </head>
-
 <body>
   <header>
     <picture class="header__logo">
-       <img class="header__img" src="../img/logo.png" alt="logo de herreria amtonutti">
+       <img class="header__img" src="../img/logo.png" alt="logo de herreria antonutti">
     </picture>
     <nav class="navbar navbar-expand-md  navbar-dark">
         <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -42,8 +41,8 @@
           </ul>
         </div>
       </nav>         
-</header>
-    <main>      
+  </header>
+  <main>      
           <section>
                     <h1 class="contactos">COMUNICATE CON NOSOTROS</h1>
                     <h2 class="contactos">Envianos un mensaje indicando el motivo de tu contacto.Te contactaremos a la brevedad.
@@ -58,12 +57,8 @@
                         <input id="enviar" type="submit" value="Enviar">
                     </form>
           </section>
-              
-              
-              
-    </main> 
-
-    <footer >
+  </main> 
+  <footer >
       <section>
               <div class="redes">     
                                       <a class="redes__instagram" href="https://www.instagram.com/herreriaantonutti/"><span class="iconify-inline" data-icon="fa:instagram" data-width="40" data-height="40"></span></a>
@@ -76,11 +71,10 @@
               <div class="encabezado">            
                 <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
                 <h3 class="encabezado__direccion">direcion: gramme 5178</h3>
-
-<div class="alert alert-danger" role="alert">
-                <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
-</div>                  
-     </section>
+                <div class="alert alert-danger" role="alert">
+                       <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+                </div>                  
+       </section>
   </footer> 
   <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
@@ -92,7 +86,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
    </script>
-  
-  
   </body>
   </html>
