--- a/views/herreria.html
+++ b/views/herreria.html
@@ -9,13 +9,13 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-     <link rel="stylesheet" href="../css/index.css">
+     <link rel="stylesheet" href="../css/translated.css">
      <link rel="icon" type="jpg" href="../img/logo.navegador.png">
  </head>
  <body>
   <header>
     <picture class="header__logo">
-       <img class="header__img" src="../img/logo.PNG" alt="logo de herreria amtonutti">
+       <img class="header__img" src="../img/logo.PNG" alt="logo de herreria antonutti">
     </picture>
     <nav class="navbar navbar-expand-md  navbar-dark">
         <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -42,57 +42,55 @@
         </div>
       </nav>         
 </header>
-     
-     <main class="container">
+       <main class="container">
          <div class="div__aluminio__herreria">
-         <article class="animate__animated animate__fadeInLeft">
+           <article class="animate__animated animate__fadeInLeft">
                       <h1 class="aluminio__herreria__titulo">herreria</h1>
                       <p class="herreria__texto"> Brindamos soluciones con todos nuestros productos para la arquitectura de su vivienda, industria o empresa. materiales de alta calidad y un servicio especializado. Integramos en su proyecto todos nuestros productos y trayectoria que ofrecerán las soluciones técnicas y estéticas que su obra necesita.</p>
-         </article>
-        </div> 
+           </article>
+         </div> 
          <article>
-          <h2 class="caja__titulo">materiales de construccion y galeria de trabajos</h2>
+             <h2 class="caja__titulo">materiales de construccion y galeria de trabajos</h2>
          </article>
          <section class="caja">
-              
               <div class="cuadro">
                     <picture>
-                             <img class="cuadro__img" src="../img/perfiles 150px.png" alt="">
+                             <img class="cuadro__img" src="../img/perfiles 150px.png" alt="perfil de hierro">
                     </picture>
                     <h3 class="cuadro__titulo">perfiles</h3>
                     <p class="cuadro__texto"> perfiles UPN - perfiles IPN</p>
               </div>
               <div class="cuadro" >            
                     <pircture>
-                               <img class="cuadro__img" src="../img/chapas 150px.png" alt="">
+                               <img class="cuadro__img" src="../img/chapas 150px.png" alt="chapas acanaladas">
                     </pircture>
                     <h3 class="cuadro__titulo">chapas</h3>
                     <p class="cuadro__texto">cahapas lisas-chaspas acanaladas</p>
               </div>
               <div class="cuadro">        
                    <pircture>
-                             <img class="cuadro__img" src="../img/mallas-metalicas 150px.png" alt="">
+                             <img class="cuadro__img" src="../img/mallas-metalicas 150px.png" alt="rollo de malla metalaca">
                    </pircture>
                    <h3 class="cuadro__titulo">mallas metalicas</h3>
                    <p class="cuadro__texto">mallas para la construccion</p>
               </div>
               <div class="cuadro">
                   <pircture>
-                           <img class="cuadro__img" src="../img/perfiles-c 150px.png" alt="">
+                           <img class="cuadro__img" src="../img/perfiles-c 150px.png" alt="perfil tipo (c) de hierro">
                   </pircture>
                   <h3 class="cuadro__titulo">perfiles-c</h3>
                   <p class="cuadro__texto">perfiles C- perfiles</p>
               </div>
               <div class="cuadro">
                    <pircture>
-                            <img class="cuadro__img" src="../img/tubos-estructurales 150px.png" alt="">
+                            <img class="cuadro__img" src="../img/tubos-estructurales 150px.png" alt="tubos cuadrados de distintos diametros">
                   </pircture>
                   <h3 class="cuadro__titulo">tubos</h3>
                   <p class="cuadro__texto">redondos-cuadrados-rectangulares</p>
               </div>
               <div class="cuadro">
                   <pircture>
-                            <img class="cuadro__img" src="../img/construccion-y-herreria 150px.png" alt="">
+                            <img class="cuadro__img" src="../img/construccion-y-herreria 150px.png" alt="hierro de construccion apilados uano arriba del otro">
                   </pircture>
                   <h3 class="cuadro__titulo">hierros</h3>
                   <p class="cuadro__texto"> planchuelas-redondos-cuadrados </p>
@@ -101,49 +99,49 @@
           <section>
             <div class="galeriaherreria">
               <picture class="imgherreria">
-                <img src="../img/asador de frente290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/asador de frente290x290.png" alt="chulengo con una vista de frente" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/asadorcostado290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/asadorcostado290x290.png" alt="chulengo con una vista de costado" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/escalones-CARACOL290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/escalones-CARACOL290x290.png" alt="escalera tipo caracol sus escalones esta hecho de malla metalica " class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/lavamanos290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/lavamanos290x290.png" alt="lavamanos con efecto oxidado" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/lavamanos-on290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/lavamanos-on290x290.png" alt="lavamanos con efecto oxidado ya en uso se ve como tira agua desde los grifos" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/portonmasrejas290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/portonmasrejas290x290.png" alt="porton exterios con una vista de frente" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/puerta reja patio290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/puerta reja patio290x290.png" alt="reja corrediza colocada en un patio" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/puertaoxidad de frente290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/puertaoxidad de frente290x290.png" alt="manija de una puerta oxidada" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/puertamadera290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/puertamadera290x290.png" alt="puerta completa con los dos paños rejas y marcos,lista para colocar" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/puertamaderaabierta290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/puertamaderaabierta290x290.png" alt="puerta completa con los dos paños abrirtas rejas y marcos,lista para colocar" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/rejas plachuelas hierro cuadrado290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/rejas plachuelas hierro cuadrado290x290.png" alt="reja con hierro cuadrado vista de perfil" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/techo de perfiles 290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/techo de perfiles 290x290.png" alt="reja colocada en el techo de una jardin de invierno" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/techo terminaciones 290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/techo terminaciones 290x290.png" alt="punta de una cenefa" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/techomachimbre290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/techomachimbre290x290.png" alt="piso flotante con baranda desde una vista de abajo" class="imgherreria__cuadro">
               </picture>
               <picture class="imgherreria">
-                <img src="../img/techomachimbrearriba290x290.png" alt="" class="imgherreria__cuadro">
+                <img src="../img/techomachimbrearriba290x290.png" alt="piso flotante con baranda desde una vista de abajo" class="imgherreria__cuadro">
               </picture>
             </div>
           </section>
@@ -163,15 +161,20 @@
                 <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
                 <h3 class="encabezado__direccion">direcion: gramme 5178</h3>
 
-<div class="alert alert-danger" role="alert">
-                <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
-</div>                  
+              <div class="alert alert-danger" role="alert">
+                  <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+              </div>                  
      </section>
   </footer> 
   <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
- </script>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
-     integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
- </script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+   </script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+       integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+   </script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+       integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+   </script>
   </body>
- </html>
+  </html>
