--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -8,7 +8,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/translated.css">
     <link rel="icon" type="jpg" href="../img/logo.navegador.png">
     
 </head>
@@ -16,7 +16,7 @@
 <body>
   <header>
     <picture class="header__logo">
-       <img class="header__img" src="../img/logo.png" alt="logo de herreria amtonutti">
+       <img class="header__img" src="../img/logo.png" alt="logo de herreria antonutti">
     </picture>
     <nav class="navbar navbar-expand-md  navbar-dark">
         <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -45,7 +45,7 @@
 </header>
     <main>
        
-                              <section id="nosotros" >
+                              <section class="nosotros" >
                                  
                                   <div class="contenedor">
                                   <picture>
